--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta property="og:title" content="My website title" />
+    <meta property="og:description" content="Summary of the contents of the page you are viewing" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,12 +18,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
     <title>Sparta Coding Club | Bootstrap Practice</title>
 
     <script>
         $(document).ready(function () {
             listing();
+            bsCustomFileInput.init()
         })
 
         function listing() {
@@ -33,18 +37,22 @@
                     for (let i = 0; i < articles.length; i++) {
                         let title = articles[i]['title'];
                         let content = articles[i]['content'];
+                        let file = articles[i]['file'];
+                        let time=articles[i]['time']||'????.??.??';
+                        let profile = articles[i]['profile']
                         let temp_html = `<div class="col-4">
                 <div class="card">
-                    <img src="https://www.kerjausaha.com/wp-content/uploads/2019/09/nama-kucing-betina-1024x768.jpg"
-                        class="card-img-top" alt="...">
+                    <img src="../${file}" class="card-img-top" alt="...">
+                                    
                     <div class="card-body">
+                        <img src="../${profile}" class="card-img-top" id="gaya" alt="...">
                         <h5 class="card-title">${title}</h5>
                         <p class="card-text">${content}</p>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">${time}</h6>
                     </div>
                 </div>
             </div>`;
-            
+
                         $('#cards-box').append(temp_html);
 
                     }
@@ -53,28 +61,56 @@
         }
 
         function posting() {
-            let title = $('#image-title').val();
-            if(!title){
-                return alert('tolong diisi ya sayang');
+            let title = $("#image-title").val();
+            if (!title) {
+                return alert("Hey user, you forgot a title");
             }
-            let content = $('#image-description').val();
-            if(!content){
-                return alert('tolong diisi ya sayang');
+            let content = $("#image-description").val();
+            if (!content) {
+                return alert("Hey user, you forgot a description");
             }
+
+            let file = $("#image").prop("files")[0];
+            let profile = $("#profile").prop("files")[0];
+
+            let form_data = new FormData();
+
+            form_data.append("file_give", file);
+            form_data.append("profile_give", profile);
+            form_data.append("title_give", title);
+            form_data.append("content_give", content);
+
             $.ajax({
-                type: 'POST',
-                url: '/diary',
-                data: {
-                    title_give: title,
-                    content_give: content
-                },
+                type: "POST",
+                url: "/diary",
+                data: form_data,
+                contentType: false,
+                processData: false,
                 success: function (response) {
                     console.log(response);
                     window.location.reload();
-                }
-            })
+                },
+            });
         }
     </script>
+    <style>
+        #gaya {
+            width: 30%;
+            height: 30%;
+            border-radius: 50%;
+            box-shadow: 0 0 10px black;
+        }
+
+        .colom {
+            display: flex;
+            flex-direction: column;
+
+        }
+
+        .colom input[type="file"] {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -84,17 +120,23 @@
         <!--isian-->
         <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Personal Diary</h1>
-                <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile01">
+                <h1 class="display-5 fw-bold">anime dan mc</h1>
+                <hr><br>
+                <div class="input-group mb-3 custom-file colom">
+                    <h3>masukan gambar anime</h3>
+                    <input type="file" class="form-control" id="image">
+                </div>
+                <div class="input-group mb-3 custom-file colom">
+                    <h3>masukan gambar main characternya</h3>
+                    <input type="file" class="form-control" id="profile">
                 </div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="iage title " aria-label="image title"
+                    <input type="text" class="form-control" placeholder="nama anime " aria-label="image title"
                         aria-describedby="basic-addon1" id="image-title">
                 </div>
                 <div class="input-group">
                     <textarea class="form-control" aria-label="image title" id="image-description"
-                        placeholder="masukkan tex"></textarea>
+                        placeholder="deskripsi"></textarea>
                 </div>
 
             </div>
